alignment fix in dashboard/users sidebar

--- a/src/components/dashsidebar/dashsidebar.scss
+++ b/src/components/dashsidebar/dashsidebar.scss
@@ -35,7 +35,7 @@
     line-height: 21px;
     color: #100f0d;
     cursor: pointer;
-    margin: 15px auto;
+    margin: 15px 0;
     padding-left: 25px;
     &:hover {
       transform: scale(1.05);
